# mutagen

./: Cargo.toml  README.md
docs/: architecture.md  custom-mutators.md  customization.md  design-decisions.md  test-structure.md  vision.md
docs/mutators/: lit_int.md  mutator_lit_bool.md  mutator_stmt.md  readme.md  unop_not.md
mutagen-preview/: Cargo.toml
mutagen-preview-transform/: Cargo.toml
mutagen-preview-transform/src/: args.rs  lib.rs  transform_info.rs  transformer.rs
mutagen-preview-transform/src/args/: arg_ast.rs  arg_parse.rs
mutagen-preview-transform/src/transformer/: default_folds.rs  transformer_binop_add.rs  transformer_lit_bool.rs  transformer_lit_int.rs  transformer_stmt.rs  transformer_unop_not.rs
mutagen-preview/src/: lib.rs  mutator.rs  optimistic.rs  runtime_config.rs
mutagen-preview/src/mutator/: mutator_binop_add.rs  mutator_lit_bool.rs  mutator_lit_int.rs  mutator_stmt.rs  mutator_unop_not.rs
mutagen-preview/src/optimistic/: add_to_sub.rs  not_to_none.rs
mutagen-preview/tests/: test_lit_bool.rs  test_lit_int.rs  test_stmt.rs
mutagen-preview/tests/common/: features_error.rs  mod.rs
