[package]
name = "mutagen-preview-transform"
version = "0.2.0"
authors = ["power-fungus <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"

# the versions of the following crates are fixed because in the past even minor changes lead to failing code.
# the `syn` dependency is particularly brittle because helper code for default folds is copied from the source code repository
# The intention is to update the dependencies manually if they have been updated.
quote = "=0.6.11"
proc-macro2 = { version = "=0.4.27", features = ["proc-macro", "nightly"] }
syn = { version = "=0.15.26", features = ["full", "extra-traits", "fold"] }

[dev-dependencies]
mutagen-preview = { path = "../mutagen-preview" }

[lib]
proc_macro = true
